# willwang.io

./: .gitignore  Cargo.toml  LICENSE  README.md  next.config.js  package-lock.json  package.json  site.toml
.github/workflows/: publish.yml
assets/: copyToClipboard.js  myFonts.js  theme.js
components/: Code.js  ColorModeContext.js  Footer.js  Header.js  LCDiffBadge.js  LCMainTable.js  LCMetaInfo.js  LCProblemTable.js  LCSolution.js  MyMarkdown.js  Navbar.js  ToggleMode.js
components/TagComponents/: Par.js
content/: index.dj  index.djot  now.dj
content/archive/: aoc2025.dj
content/euler/: 681.dj  971.dj  972.dj  index.dj
content/styles/: _env.scss  _fonts.scss  main.scss
css/: main.scss
css/abstracts/: _mixins.scss
css/base/: _fonts.scss  _footnotes.scss  _html.scss  _links.scss  _lists.scss  _typography.scss
css/components/: _card.scss  _edited.scss  _nav.scss  _pe.scss  _post.scss  _table.scss
css/global/: _fonts.scss
css/layout/: _container.scss  _footer.scss
pages/: _app.js  about.js  delaunay.js  index.js  site-notes.js
pages/leetcode/: [problemId].js  index.js
posts/: delaunay.md
posts/leetcode/: 0489.md  1626.md
src/: ast.rs  content.rs  djot.rs  file_util.rs  lib.rs  main.rs  parser.rs  render.rs
src/parser/: block.rs  context.rs  inline.rs
styles/: fonts.css  globals.css
templates/: base.html
templates/js/: mathjax-config.js
tests/: fixtures_check.rs
tests/fixtures/: expected.html  input.djot
tools/: glyph_trimmer.sh
