[package]
name = "ssg"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ssg"
path = "src/main.rs"

[dependencies]
tera = "1.20.1"
rstest = "0.26.1"
indoc = "2"
jotdown = "0.9.0"
serde_json = "1.0.145"
lazy_static = "1.5.0"
toml = "0.9.8"
anyhow = "1.0.100"
serde = { version = "1", features = ["derive"] }